--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,15 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    supportLibrary = "27.1.1"
+    compileSdkVersion = 27
+    minSdkVersion = 25
+    targetSdkVersion = 27
+    retrofitVersion = "2.5.0"
+    archCompVersion = "1.1.1"
+    roomVersion = "1.1.1"
+    picassoVersion = "2.71828"
+    dagger2Version = "2.15"
+}
