--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
+// Versions for different dependencies
 ext {
     supportLibrary = "27.1.1"
     compileSdkVersion = 27
