Added dagger2 and arch comps

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,18 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
+    //Arch Comps
+    //Lifecycle - ViewModels LiveData
+    implementation "android.arch.lifecycle:extensions:$archCompVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$archCompVersion"
+
+    //Dagger2
+    implementation "com.google.dagger:dagger:$dagger2Version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$dagger2Version"
+    implementation "com.google.dagger:dagger-android:$dagger2Version"
+    implementation "com.google.dagger:dagger-android-support:$dagger2Version"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger2Version"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
