--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     //Arch Comps
     //Lifecycle - ViewModels LiveData
     implementation "android.arch.lifecycle:extensions:$archCompVersion"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     annotationProcessor "android.arch.lifecycle:compiler:$archCompVersion"
 
     //Dagger2
@@ -53,6 +54,8 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$dagger2Version"
     implementation "com.google.dagger:dagger-android-support:$dagger2Version"
     annotationProcessor "com.google.dagger:dagger-android-processor:$dagger2Version"
+
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
